language/move-lang/tests/move_check/parser/let_binding_missing_paren.move
module M {
    f() {
        let (x1, x2 = (1, 2); // Test a missing right parenthesis
    }
}
